tests-integration/tests/roundtrip/invalid/semantic/typecheck/multiple_wrong_elements_in_list/input.essence
find x, y, z: bool
such that sum([x, y, z]) = 15